--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "vue": "^3.4.29",
-    "vue-draggable-plus": "^0.5.3"
+    "vue-draggable-plus": "^0.5.3",
+    "vue3-toastify": "^0.2.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
